--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,8 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@vicons/carbon": "^0.13.0",
+        "@vicons/utils": "^0.1.4",
         "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
